@@ -1,3 +1,4 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
 llc_demo_message (DSAP = 42, SSAP = 42, Control = 3)
 llc_demo_message (DSAP = 42, SSAP = 42, Control = 3)
 llc_demo_message (DSAP = 42, SSAP = 42, Control = 3)
